tools/vendor/datatest-stable/tests/compile-fail/old-format.rs
datatest_stable::harness!(foo, "path1", r"^.*/*$", bar::baz, "path2", r"^.*/*$");

fn main() {}
